--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,13 @@ environment:
 
 dependencies:
   collection: ^1.18.0
+  dio: ^5.5.0+1
   elementary: ^3.0.0
   elementary_helper: ^1.0.1
   flutter:
     sdk: flutter
   http: ^1.2.2
+  image_picker: ^1.1.2
   shared_preferences: ^2.2.3
   shimmer: ^3.0.0
 
